fix: removed all notions of delivery modes
